--- a/JigsawUI.html
+++ b/JigsawUI.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 </head>
-<a href="https://kvzmstudios.lanzoui.com/i4i21tm5kpg">
+<a href="https://kvzmstudios.lanzoui.com/ioOratm6pqd">
 <span lang="en-US">
 <span lang="zh-CN">点击下载</span></a></p></p>
 <span lang="zh-CN">_________________________________</span></p>
