--- a/JigsawUI.html
+++ b/JigsawUI.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 </head>
-<a href="https://kvzmstudios.lanzoui.com/ioOratm6pqd">
+<a href="https://kvzmstudios.lanzoui.com/irfDytwlv7a">
 <span lang="en-US">
 <span lang="zh-CN">点击下载</span></a></p></p>
 <span lang="zh-CN">_________________________________</span></p>
+<span lang="zh-CN">2021/09/12 Build 1121</span></p>·带来了全新的平板模式，其中包含自动全屏的应用（需开发者适配），全新的“应用屏幕”，全新的“平板模式任务栏”</p>·移除了Him(</p>
 <span lang="zh-CN">2021/09/04 Build 1120</span></p>·Box终端现在可直接从菜单打开</p>·控制中心(Beta)现在可以直接从菜单打开</p>·刷新状态移动到二级菜单“工具”当中</p>·在设置中增加了JigsawUpdate功能，关于窗口中的“检查更新”按钮现在调用的是JigsawUpdate服务</p>·关于窗口界面更改</p>·应用列表正在浅色模式下的外观有所调整</p></p>
 <span lang="zh-CN">2021/08/29 Build 1119</span></p>·修复了设置的tab指示器在最后两个按钮处不显示的问题</p>·修复了Box终端无故增加空白快捷方式的问题</p>·Box终端现在支持中文了</p>·增加了窗口阴影</p></p></span>
 <span lang="zh-CN">2021/08/28 Build 1118</span></p>·Build1117源码丢失，已尽量恢复</p>·如你所见，这次程序体积大小增加到了1.8MB，那是因为这个版本</p>集成了Jigsaw包管理器 和 Jigasw程序包打包程序</p>·更改了应用列表的配色</p>·修复了应用列表和设置启动时没有动画的问题</p>·Box终端增加到设置→测试功能中</p>·修复了应用列表会显示.lnk后缀的问题</p></p>
