--- a/JigsawUI.html
+++ b/JigsawUI.html
@@ -1,5 +1,5 @@
 <a
-href="https://kvzmstudios.lanzoui.com/iOJJqvfdfze">点击下载</p></a>
+href="https://kvzmstudios.lanzoui.com/iDY9Kvn7uij">点击下载</p></a>
 _________________________________</p>
 2021/10/22 Build 1123</p>
 ·使用Jigsaw开发者模块1.9.1版本进行开发
