--- a/JigsawUI.html
+++ b/JigsawUI.html
@@ -1,6 +1,11 @@
 <a
-href="https://kvzmstudios.lanzoui.com/iDY9Kvn7uij">点击下载</p></a>
+href="https://kvzmstudios.lanzoui.com/i9lxPw89ckb">点击下载</p></a>
 _________________________________</p>
+2021/11/06 Build 1124</p>
+·增加了小组件功能（提供开发者模板）
+·深色模式下，应用列表“运行”按钮增加了强调色
+·更改了透明效果api的读入方式
+·增强了设置开关组件的观感
 2021/10/22 Build 1123</p>
 ·使用Jigsaw开发者模块1.9.1版本进行开发
 ·更改了部分窗口的圆角UI和实现方法
