--- a/JigsawUI.html
+++ b/JigsawUI.html
@@ -2,10 +2,10 @@
 href="https://kvzmstudios.lanzoui.com/ixcaFwqee4f">点击下载</p></a>
 _________________________________</p>
 2021/11/21 Build 1125</p>
-·在应用列表增加“在线商店”入口
-·Box终端已成为独立程序
-·移除控制中心入口
-·该版本未修复任何Bug
+·在应用列表增加“在线商店”入口</p>
+·Box终端已成为独立程序</p>
+·移除控制中心入口</p>
+·该版本未修复任何bug，为功能更新</p>
 2021/11/06 Build 1124</p>
 ·增加了小组件功能（提供开发者模板）
 ·深色模式下，应用列表“运行”按钮增加了强调色
