--- a/JigsawNotePad.html
+++ b/JigsawNotePad.html
@@ -307,7 +307,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:å®‹ä½“;
+	{font-family:ËÎÌå;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -315,7 +315,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:é»‘ä½“;
+	{font-family:ºÚÌå;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -323,7 +323,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:é»‘ä½“;
+	{font-family:ºÚÌå;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -338,14 +338,14 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:-469750017 -1073732485 9 0 511 0;}
 @font-face
-	{font-family:"\@é»‘ä½“";
+	{font-family:"\@ºÚÌå";
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:"\@å®‹ä½“";
+	{font-family:"\@ËÎÌå";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -363,11 +363,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:å®‹ä½“;}
+	mso-fareast-font-family:ËÎÌå;}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"é¡µçœ‰ Char";
+	mso-style-link:"Ò³Ã¼ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:center;
@@ -380,11 +380,11 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	mso-padding-alt:0cm 0cm 1.0pt 0cm;
 	font-size:9.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:å®‹ä½“;}
+	mso-fareast-font-family:ËÎÌå;}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"é¡µè„š Char";
+	mso-style-link:"Ò³½Å Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
@@ -392,7 +392,7 @@ p.MsoFooter, li.MsoFooter, div.MsoFooter
 	layout-grid-mode:char;
 	font-size:9.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:å®‹ä½“;}
+	mso-fareast-font-family:ËÎÌå;}
 a:link, span.MsoHyperlink
 	{mso-style-priority:99;
 	color:blue;
@@ -407,52 +407,52 @@ a:visited, span.MsoHyperlinkFollowed
 p.MsoPlainText, li.MsoPlainText, div.MsoPlainText
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"çº¯æ–‡æœ¬ Char";
+	mso-style-link:"´¿ÎÄ±¾ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
 	text-justify:inter-ideograph;
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
-	font-family:å®‹ä½“;
-	mso-bidi-font-family:å®‹ä½“;}
+	font-family:ËÎÌå;
+	mso-bidi-font-family:ËÎÌå;}
 span.Char
-	{mso-style-name:"é¡µçœ‰ Char";
+	{mso-style-name:"Ò³Ã¼ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:é¡µçœ‰;
+	mso-style-link:Ò³Ã¼;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
-	font-family:å®‹ä½“;
-	mso-ascii-font-family:å®‹ä½“;
-	mso-fareast-font-family:å®‹ä½“;
-	mso-hansi-font-family:å®‹ä½“;}
+	font-family:ËÎÌå;
+	mso-ascii-font-family:ËÎÌå;
+	mso-fareast-font-family:ËÎÌå;
+	mso-hansi-font-family:ËÎÌå;}
 span.Char0
-	{mso-style-name:"é¡µè„š Char";
+	{mso-style-name:"Ò³½Å Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:é¡µè„š;
+	mso-style-link:Ò³½Å;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
-	font-family:å®‹ä½“;
-	mso-ascii-font-family:å®‹ä½“;
-	mso-fareast-font-family:å®‹ä½“;
-	mso-hansi-font-family:å®‹ä½“;}
+	font-family:ËÎÌå;
+	mso-ascii-font-family:ËÎÌå;
+	mso-fareast-font-family:ËÎÌå;
+	mso-hansi-font-family:ËÎÌå;}
 span.Char1
-	{mso-style-name:"çº¯æ–‡æœ¬ Char";
+	{mso-style-name:"´¿ÎÄ±¾ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:çº¯æ–‡æœ¬;
-	font-family:å®‹ä½“;
-	mso-ascii-font-family:å®‹ä½“;
-	mso-fareast-font-family:å®‹ä½“;
-	mso-hansi-font-family:å®‹ä½“;}
+	mso-style-link:´¿ÎÄ±¾;
+	font-family:ËÎÌå;
+	mso-ascii-font-family:ËÎÌå;
+	mso-fareast-font-family:ËÎÌå;
+	mso-hansi-font-family:ËÎÌå;}
 p.msochpdefault, li.msochpdefault, div.msochpdefault
 	{mso-style-name:msochpdefault;
 	mso-style-unhide:no;
@@ -463,7 +463,7 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:å®‹ä½“;}
+	mso-fareast-font-family:ËÎÌå;}
 span.SpellE
 	{mso-style-name:"";
 	mso-spl-e:yes;}
@@ -502,7 +502,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:æ™®é€šè¡¨æ ¼;
+	{mso-style-name:ÆÕÍ¨±í¸ñ;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -529,66 +529,64 @@ punctuation'>
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoPlainText><b><span lang=EN-US style='font-size:24.0pt;font-family:
-é»‘ä½“'><a href="https://kvzmstudios.github.io/"><span style='color:windowtext;
+ºÚÌå'><a href="https://kvzmstudios.github.io/"><span style='color:windowtext;
 text-decoration:none;text-underline:none'>KVZM Studios</span></a></span></b></p>
 
 <p class=MsoPlainText><span class=SpellE><b><span lang=EN-US style='font-size:
 14.0pt'>JigsawUI</span></b></span><b><span lang=EN-US style='font-size:14.0pt'>&gt;<span
-class=SpellE>JigsawUI</span></span></b><b><span style='font-size:14.0pt'>è½¯ä»¶ï¼šæ–‡æœ¬ç¼–è¾‘å™¨</span></b></p>
-
-<p class=MsoPlainText><span lang=zh-CN>&nbsp;</span></p>
-
-<p class=MsoPlainText>æ–‡æœ¬ç¼–è¾‘å™¨<span lang=EN-US>1.2.1</span></p>
-
-<p class=MsoNormal><u><span lang=EN-US><a
-href="https://kvzmstudios.lanzoui.com/iaryGvfglha">Jak<span lang=EN-US
-style='font-family:å®‹ä½“'><span lang=zh-CN>åŒ…ï¼ˆç‚¹å‡»ä¸‹è½½ï¼‰</span></span><o:p></o:p></a></span></u></p>
-
-<p class=MsoPlainText><span lang=EN-US><a
-href="https://kvzmstudios.lanzoui.com/i98xavfglfi">exe<span lang=EN-US><span
-lang=zh-CN>æ–‡ä»¶ï¼ˆç‚¹å‡»ä¸‹è½½ï¼‰<o:p></o:p></span></span></a></span></p>
+class=SpellE>JigsawUI</span></span></b><b><span style='font-size:14.0pt'>Èí¼ş£ºÎÄ±¾±à¼­Æ÷</span></b></p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>Â·ç®€æ´çš„æ–‡æœ¬ç¼–è¾‘å™¨</p>
+<p class=MsoPlainText><b style='mso-bidi-font-weight:normal'><span
+style='font-family:ºÚÌå'>ÎÄ±¾±à¼­Æ÷<span lang=EN-US>1.2.2<o:p></o:p></span></span></b></p>
 
-<p class=MsoPlainText>Â·æ‹¥æœ‰æ·±è‰²æ¨¡å¼ï¼ˆéœ€é€šè¿‡<span class=SpellE><span lang=EN-US>JigsawUI</span></span>æœåŠ¡ç¨‹åºå¼€å¯ï¼‰</p>
+<p class=MsoNormal><span class=SpellE><u><span lang=EN-US>Jak</span></u></span><u><span
+style='font-family:ËÎÌå'>°ü£¨ÀÁµÃ´ò°ü£¬ÕâÀï¾Í²»Ìá¹©Á´½ÓÁË£©</span><span class=MsoHyperlink><span
+lang=EN-US><o:p></o:p></span></span></u></p>
+
+<p class=MsoPlainText><span lang=EN-US><a
+href="https://kvzmstudios.lanzouo.com/iqA4Cx9g5xg">exe<span lang=EN-US><span
+lang=EN-US>ÎÄ¼ş£¨µã»÷ÏÂÔØ£©<o:p></o:p></span></span></a></span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText>¡¤¼ò½àµÄÎÄ±¾±à¼­Æ÷</p>
+
+<p class=MsoPlainText>¡¤ÓµÓĞÉîÉ«Ä£Ê½£¨ĞèÍ¨¹ı<span class=SpellE><span lang=EN-US>JigsawUI</span></span>·şÎñ³ÌĞò¿ªÆô£©</p>
 
 <p class=MsoNormal><span lang=EN-US>____________________________________________________</span></p>
 
-<p class=MsoPlainText>æ›´æ–°æ—¥å¿—ï¼š</p>
+<p class=MsoPlainText>¸üĞÂÈÕÖ¾£º</p>
 
-<p class=MsoPlainText><span lang=EN-US>1.2.1</span>ç‰ˆæœ¬ <span lang=EN-US>2021/10/16</span></p>
+<p class=MsoPlainText><span lang=EN-US>1.2.2</span>°æ±¾<span lang=EN-US>
+2021/12/5</span></p>
 
-<p class=MsoPlainText>Â·é€‚é…æœ€æ–°çš„â€œå¿«é€Ÿè°ƒæ•´çª—å£â€åŠŸèƒ½</p>
+<p class=MsoPlainText>¡¤ÊÊÅä<span class=SpellE><span lang=EN-US>JigsawUI</span></span><span
+lang=EN-US> SDK 2.0</span></p>
 
-<p class=MsoPlainText>Â·é€‚é…åœ†è§’<span lang=EN-US>UI</span></p>
+<p class=MsoPlainText><span lang=EN-US>1.2.1</span>°æ±¾<span lang=EN-US>
+2021/10/16</span></p>
 
-<p class=MsoPlainText>Â·<span class=GramE>ç§»é™¤äº†å·¦</span>ä¸Šè§’çš„ç”¨æˆ·åæ˜¾ç¤º</p>
+<p class=MsoPlainText>¡¤ÊÊÅä×îĞÂµÄ¡°¿ìËÙµ÷Õû´°¿Ú¡±¹¦ÄÜ</p>
 
-<p class=MsoPlainText><span lang=EN-US>1.2</span>ç‰ˆæœ¬<span lang=EN-US> 2021/9/12</span></p>
+<p class=MsoPlainText>¡¤ÊÊÅäÔ²½Ç<span lang=EN-US>UI</span></p>
 
-<p class=MsoPlainText>Â·é€‚é…å…¨æ–°å¹³æ¿æ¨¡å¼</p>
+<p class=MsoPlainText>¡¤<span class=GramE>ÒÆ³ıÁË×ó</span>ÉÏ½ÇµÄÓÃ»§ÃûÏÔÊ¾</p>
 
-<p class=MsoPlainText><span lang=EN-US>1.1</span>ç‰ˆæœ¬<span lang=EN-US> 2021/8/29</span></p>
+<p class=MsoPlainText><span lang=EN-US>1.2</span>°æ±¾<span lang=EN-US> 2021/9/12</span></p>
 
-<p class=MsoPlainText>Â·æ–°å¢æ‹–<span class=GramE>æ”¾æ–‡ä»¶</span>åŠŸèƒ½ï¼Œæ‰“å¼€æ–‡ä»¶ï¼Œä¸€æ‹–å³è¾¾</p>
+<p class=MsoPlainText>¡¤ÊÊÅäÈ«ĞÂÆ½°åÄ£Ê½</p>
 
-<p class=MsoPlainText>Â·ä¿®å¤å…³äºçª—å£ä¸­åå­—é”™è¯¯çš„é—®é¢˜</p>
+<p class=MsoPlainText><span lang=EN-US>1.1</span>°æ±¾<span lang=EN-US> 2021/8/29</span></p>
 
-<p class=MsoPlainText><span lang=EN-US>1.0</span>ç‰ˆæœ¬<span lang=EN-US> 2021/8/27</span></p>
+<p class=MsoPlainText>¡¤ĞÂÔöÍÏ<span class=GramE>·ÅÎÄ¼ş</span>¹¦ÄÜ£¬´ò¿ªÎÄ¼ş£¬Ò»ÍÏ¼´´ï</p>
 
-<p class=MsoPlainText>Â·ä½ å¯èƒ½å–œæ¬¢çš„æ–‡æœ¬ç¼–è¾‘å™¨æ¥äº†ï¼èµ¶å¿«ä¸‹è½½ä½“éªŒå§ï¼</p>
+<p class=MsoPlainText>¡¤ĞŞ¸´¹ØÓÚ´°¿ÚÖĞÃû×Ö´íÎóµÄÎÊÌâ</p>
 
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+<p class=MsoPlainText><span lang=EN-US>1.0</span>°æ±¾<span lang=EN-US> 2021/8/27</span></p>
 
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
-
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
-
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
-
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+<p class=MsoPlainText>¡¤Äã¿ÉÄÜÏ²»¶µÄÎÄ±¾±à¼­Æ÷À´ÁË£¡¸Ï¿ìÏÂÔØÌåÑé°É£¡</p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
@@ -606,7 +604,17 @@ lang=zh-CN>æ–‡ä»¶ï¼ˆç‚¹å‡»ä¸‹è½½ï¼‰<o:p></o:p></span></span></a></span></p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>è”ç³»æ–¹å¼ï¼š<span lang=EN-US><a
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText>ÁªÏµ·½Ê½£º<span lang=EN-US><a
 href="mailto:kvzmstudios@outlook.com">E-mail</a></span></p>
 
 <p class=MsoPlainText><span lang=EN-US>(C)KVZM Studios 2021 </span></p>
