--- a/JigsawOS/index.html
+++ b/JigsawOS/index.html
@@ -5,13 +5,18 @@
   <title >JigsawOS——探索无限</title> 
   <script src="js/jq.js"></script> 
   <h1 >JigsawOS——探索无限 <del>(大饼无限</del></h1> 
-  <a  href="https://kvzmstudios.github.io/"><button >←返回KVZM Studios主页</button></a> 
-  <hr > 
-  <a><button>开发者中心</button></a>
+  <!--<a  href="https://kvzmstudios.github.io/">KVZM Studios ></a> -->
+  <a href="https://kvzmstudios.github.io/JigsawOS/"><button>JigsawOS</button></a>
+  <a href="https://kvzmstudios.github.io/JigsawOS/DeveloperCenter"><button>开发者中心</button></a>
   <a><button>镜像下载</button></a>
+  
+  
   <!--<a><button>通过视频了解</button></a>-->
   <hr>
-  <p>后面的饼以后在画吧！</p>
+  <p>非Unix内核，让我们探索创造的乐趣！</p>
+  <a href="https://kvzmstudios.github.io/JigsawOS/DeveloperCenter">开发者中心</a>
+  <br>
+  <a href="">下载体验</a>
   <p><br></p>
   <p >(C)KVZM Studios 2022</p>  
  </body>
