--- a/JigsawOS/DeveloperCenter/index.html
+++ b/JigsawOS/DeveloperCenter/index.html
@@ -6,13 +6,13 @@
   <script src="js/jq.js"></script> 
   <h1 >JigsawOS开发者中心</h1> 
   <a href="https://kvzmstudios.github.io/JigsawOS/"><button>JigsawOS</button></a>
-  <a href="https://kvzmstudios.github.io/JigsawOS/DeveloperCenter"><button>开发者中心</button></a>
-  <a><button>镜像下载</button></a>
+  <a ><button>开发者中心</button></a>
+  <a href="https://kvzmstudios.github.io/JigsawOS/Download"><button>镜像下载</button></a>
   <hr > 
   <h2>JCode——Windows端的JigsawOS IDE</h2>
   <a href="https://pigeon-ming.github.io/JCode/"><button>了解详情</button></a>
   <hr>
-  <p>[文档]<a>JigsawOS开发文档</a>（文档还没写）</p>
+  <p>[文档]<a href="https://kvzmstudios.lanzout.com/b01w446kd">JigsawOS开发文档 （密码:ca1j）  </a></p>
   <p>[视频]<a>JigsawOS应用开发——从入门到入土</a>（视频还没做）</p>
   <p><br></p>
   <p >(C)KVZM Studios 2022</p>  
