--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     
   <h1 >KVZM Studios</h1> 
   <hr>
-  <h2>该站点主页暂时迁移至  <a href="https://pigeon-ming.github.io">Pigeon_Ming的个人主页</a>  为您带来的不便敬请谅解！</h2>
+  <h3>JigsawOS——探索无限</h3>
+  <p>基于HariboteOS开发的操作系统。</p>
+  <a href="https://kvzmstudios.github.io/JigsawOS/">了解详情></a>
+  <hr>
+  <a href="https://kvzmstudios.github.io/OldPages/New_index">更多已停止支持的项目</a>
   <hr>
   <p>——社会注意核心价值观——</p>
   <p></p>
