--- a/JigsawOS/DeveloperCenter/index.html
+++ b/JigsawOS/DeveloperCenter/index.html
@@ -5,8 +5,8 @@
   <title >JigsawOS开发者中心</title> 
   <script src="js/jq.js"></script> 
   <h1 >JigsawOS开发者中心</h1> 
-  <a href="https://kvzmstudios.github.io/JigsawOS/"><button>JigsawOS</button></a>
-  <a ><button>开发者中心</button></a>
+  <a href="http://pigeon_ming.svvs.top/index.php/jigsawos"><button>JigsawOS</button></a>
+  <!--<a ><button>开发者中心</button></a>
   <a href="https://kvzmstudios.github.io/JigsawOS/Download"><button>镜像下载</button></a>
   <hr > 
   <h2>JCode——Windows端的JigsawOS IDE</h2>
@@ -14,7 +14,8 @@
   <hr>
   <p>[文档]<a href="https://kvzmstudios.lanzout.com/b01w446kd">JigsawOS开发文档 （密码:ca1j）  </a></p>
   <p>[视频]<a>JigsawOS应用开发——从入门到入土</a>（视频还没做）</p>
-  <p><br></p>
-  <p >(C)KVZM Studios 2022</p>  
+  <p><br></p>-->
+  <p>该站点已迁移至新网址：<a href="http://pigeon_ming.svvs.top/index.php/jigsawos/devcenter">点击前往</a>,给您带来的不便敬请谅解。</p>
+  <p >(C)KVZM Studios 2023</p>  
  </body>
 </html>
