--- a/JigsawOS/index.html
+++ b/JigsawOS/index.html
@@ -2,22 +2,23 @@
  <head></head> 
  <body > 
   <meta  charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
-  <title >JigsawOS——探索无限</title> 
+  <title >JigsawOS</title> 
   <script src="js/jq.js"></script> 
-  <h1 >JigsawOS——探索无限 <del>(大饼无限</del></h1> 
+  <h1 >JigsawOS <del>(大饼无限</del></h1> 
+  <p>该站点已迁移至新网址：<a href="http://pigeon_ming.svvs.top/index.php/jigsawos">点击前往</a>,给您带来的不便敬请谅解。</p>
   <!--<a  href="https://kvzmstudios.github.io/">KVZM Studios ></a> -->
-  <a><button>JigsawOS</button></a>
+  <!--<a><button>JigsawOS</button></a>
   <a href="https://kvzmstudios.github.io/JigsawOS/DeveloperCenter"><button>开发者中心</button></a>
-  <a href="https://kvzmstudios.github.io/JigsawOS/Download"><button>镜像下载</button></a>
+  <a href="https://kvzmstudios.github.io/JigsawOS/Download"><button>镜像下载</button></a>-->
   
   
   <!--<a><button>通过视频了解</button></a>-->
-  <hr>
+  <!--<hr>
   <p>非Unix内核，让我们探索创造的乐趣！</p>
   <a href="https://kvzmstudios.github.io/JigsawOS/DeveloperCenter">开发者中心</a>
   <br>
   <a href="https://kvzmstudios.github.io/JigsawOS/Download">下载体验</a>
-  <p><br></p>
-  <p >(C)KVZM Studios 2022</p>  
+  <p><br></p>-->
+  <p >(C)KVZM Studios 2023</p>  
  </body>
 </html>
