--- a/JigsawOS/Download/index.html
+++ b/JigsawOS/Download/index.html
@@ -5,8 +5,8 @@
   <title >下载JigsawOS</title> 
   <script src="js/jq.js"></script> 
   <h1 >下载JigsawOS</h1> 
-  <a href="https://kvzmstudios.github.io/JigsawOS/"><button>JigsawOS</button></a>
-  <a href="https://kvzmstudios.github.io/JigsawOS/DeveloperCenter"><button>开发者中心</button></a>
+  <a href="https://pigeon_ming.svvs.top/index.php/jigsawos"><button>JigsawOS</button></a>
+  <a href="https://pigeon_ming.svvs.top/index.php/jigsawos/devcenter"><button>开发者中心</button></a>
   <a><button>镜像下载</button></a>
   <hr > 
   <a href="https://kvzmstudios.lanzout.com/b01w45ruf"><button>下载img镜像（密码:gixk）</button></a>
