--- a/JigsawOS/index.html
+++ b/JigsawOS/index.html
@@ -4,7 +4,7 @@
   <meta  charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
   <title >JigsawOS</title> 
   <script src="js/jq.js"></script> 
-  <h1 >JigsawOS <del>(大饼无限</del></h1> 
+  <h1 >JigsawOS </h1> 
   <p>该站点已迁移至新网址：<a href="http://pigeon_ming.svvs.top/index.php/jigsawos">点击前往</a>,给您带来的不便敬请谅解。</p>
   <!--<a  href="https://kvzmstudios.github.io/">KVZM Studios ></a> -->
   <!--<a><button>JigsawOS</button></a>
